# dlog

./: .gitignore  CHANGELOG.md  dlog.cabal
app/: Main.hs
src/: Create.hs  Delete.hs  Log.hs  Read.hs  Update.hs
